--- a/index.html
+++ b/index.html
@@ -10,6 +10,118 @@
         <link media="(min-width=701px)" href="css/style-large.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
+        <header>
+            <div class="logo"></div>
+        </header>
+        <div class="search"></div>
+        <nav>
+            <a href="#about">Acerca de</a>
+            <a href="#manifesto">Manifiesto</a>
+            <a href="#wiki">Wiki</a>
+            <a href="#barrio">Barrio Hacker</a>
+            <a href="#contact">Contacto</a>
+        </nav>
+        <h1>HackLab Cochabamba</h1>
+        <p>Bienvenido al sitio web del HackLab Cochabamba</p>
+        <section id="about">
+            <article>
+                <h3>Sobre el Hacklab</h3>
+                <section>
+                    <h5>¿Qué es el Hacklab?</h5>
+                    <p>El HackLab Cochabamba es un espacio distribuido, abierto y colaborativo, de experimentación hacker en Cochabamba.</p>
+                    <p>El HackLab no es una institución, es la suma de voluntades. Somos un espacio no físico de co-creación, transferencia de conocimiento, apertura de lógicas, ... todo ello desde la premisa básica del COMPARTIR.</p>
+                    <h5>¿Qué entendemos por HackLab?</h5>
+                    <p>Un lugar donde crear, experimentar y compartir lo que sabemos libremente.</p>
+                    <h5>¿Qué es un hacker?</h5>
+                    <p>Una persona apasionada y creativa que usa el conocimiento que tiene para crear algo nuevo o transformarlo, a través de la experimentación y el trabajo colaborativo. Trabaja desarrollando programas, encontrando soluciones, proponiendo usos sociales de la tecnología, reciclando materiales antiguos para darles una vida nueva… mira a ver, a lo mejor eres un/a hacker y no lo sabías ;)</p>
+                    <h5>¿Por qué un HackLab?</h5>
+                    <p>Porque es importante encontrarnos, conocernos y reconocernos. Y así construir nuevas realidades a través de la inteligencia colectiva.</p>
+                </section>
+                <section>
+                    <h3>¿Qué hace?</h3>
+                    <p>Estamos constatemente proponiendo y desarrollando distintos proyectos. Trabajando bajo una Tecno-Lógica, es decir, la forma de pensar la forma de hacer. Todo ello entendido como la resignificación de los medios desde una idea básica y central de pertinencia para nuestro contexto.</p>
+                    <p>Entre muchas cosas que hacemos puedes consultar:</p>
+                    <ul>
+                        <li><a href="#">Dispositivos inalámbricos caseros</a></li>
+                        <li><a href="#">Intervalómetro con ATTINY13</a></li>
+                        <li><a href="#">+ en la Wiki</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>¿Quiénes lo integran?</h3>
+                    <div class="member imagen"></div>
+                    <div class="member martadero"></div>
+                    <div class="member openstreetmap"></div>
+                    <div class="member scesi"></div>
+                    <div class="member androidbolivia"></div>
+                    <div class="member villacoronilla"></div>
+                    <div class="member bdbolivia"></div>
+                    <div class="member drupalbolivia"></div>
+                    <div class="member hivos"></div>
+                    <h5>¿Quieres sumarte?</h5>
+                    <p>El HackLab no es un entorno cerrado, es la suma de voluntades para la generación de un entorno hacker en Cochabamba.</p>
+                    <p>Inscríbete a la <a href="#contact">lista de distribución</a> y hablemos todos juntos.</p>
+                </section>
+            </article>
+        </section>
+        <section id="manifesto">
+            <article>
+                <h3>Manifiesto</h3>
+                <p><cite>Creemos que en las escuelas no sólo deben enseñar saberes, técnicas y métodos, sino sobre todo el espíritu de buena voluntad, es decir, el hábito de ayudar a tu prójimo - <strong>R.M. Stallman</strong></cite></p>
+                <p>La escuela no debe estar alejada de la realidad encerrada en 4 paredes, debe ser parte del desarrollo de la sociedad y formar parte de los procesos productivos.</p>
+                <p>Queremos transformar el presente con nuestras manos e ideas, por un mundo mejor.</p>
+                <ul>
+                    <li>Queremos crear el futuro con nuestras mentes, manos e ideas.</li>
+                    <li>Queremos proponer ideas contextuales a nuestra realidad más cercana.</li>
+                    <li>Leemos la vida y lo que la rodea, transformándola creativamente a nuestro antojo.</li>
+                    <li>Somos más porque estamos juntos.</li>
+                </ul>
+                <p>¿Porqué nos interesa insertar estos valores en la educación? Porque es el  lugar propicio para cultivar estos valores, dejemos de culpar a otros de los males y hagámoslo! Al final queremos seguir/continuar pensando y actuando como niños... con libertad, sin pre-conceptos, curiosos, preguntones, creativos!</p>
+                <cite>Si no eres parte de la solución eres parte del problema - <strong>Karl Marx</strong></cite>
+                <p>Carlos Escaño es el autor de Educación Hacker una obra audiovisual, y lo liberó en 2013 bajo una licencia Creative Commons BY-NC.</p>
+                <p>Y sobre todo ¡dejá de pensar que nos dedicamos a invadir la privacidad de otros!</p>
+                <p>Nosotros pensamos que ofrecer, diseñar, crear, programar y  poner en común la información es muy importante.</p>
+                <p>¡Tú también puedes ser un(a) hacker!</p>
+                <p>Revisa las ampliaciones y modificaciones al Manifiesto en nuestra <a href="#">wiki</a>.</p>
+            </article>
+        </section>
+        <section id="wiki">
+            <article>
+                <h3>Wiki</h3>
+                <p>Una Wiki es un espacio donde potenciar la inteligencia colectiva. Desde el HackLab te animamos a consultar los proyectos en marcha, aportar a la documentación planteada, generar y crear otros nuevos proyectos.</p>
+                <p>Chequea la <a href="#">Wiki del HackLab Cochabamba</a>.</p>
+            </article>
+        </section>
+        <section id="barrio">
+            <article>
+                <h3>Barrio Hacker</h3>
+                <p>Una plataforma libre y segura desde donde organizarnos, crear, proponer, agendar y sobre todo, trabajar en conjunto.</p>
+                <p>Porque cada vez necesitamos más espacios donde sepamos que nuestra información no es comercializada y utilizada para fines que no son los que nosotr+s decidimos hemos pensado en crear el Barrio Hacker: el barrio de todas aquellas personas que quieren compartir un vecindario con amigas y amigos glocales con los que encontrarse y poder plantear alternativas a las plataformas tradicionales.</p>
+                <p>Es libre, así que vísita todos los barrios en <a href="http://www.barriohacker.net">www.barriohacker.net</a></p>
+                <p>Uno de los barrios de dónde surge esta idea es el de las Trayectorias Tecno-Lógicas, y que en el siguiente vídeo puedes ver de qué se trata la idea.</p>
+                <iframe class="vid" src="https://www.youtube.com/watch?v=vtDqjwQIL50"></iframe>
+            </article>
+        </section>
+        <section id="contact">
+            <article>
+                <h3>Contacto</h3>
+                <p>Para generar una discusión abierta y colaborativa, no podemos basarnos en la unidireccionalidad. Para eso se crean las listas de correo participativas donde cada individuo puede adherirse libremente y aportar, cuestionar, consultar a el resto de personas inscritas para que con ello podamos reforzar una inteligencia colectiva.</p>
+                <p>Te solicitamos leas a propósito de las Netiquetas para poder lograr una discusión orgánica y entendible, basada en una ética y lógicas colaborativas y progresivas. A día de hoy decenas de personas forman parte de esta lista cuyos objetivos son:</p>
+                <ul>
+                    <li>Compartir conocimiento y actividades relevantes al Hacking en Cochabamba.</li>
+                    <li>Desarrollar proyectos conjuntos valorando su pertinencia para el contexto de Cochabamba y Bolivia.</li>
+                    <li>Conocer nuevas personas, colectivos, instituciones,… que creen en un cambio de paradigma social a través de la ética hacker.</li>
+                    <li>Apoyar y ser apoyado para el desarrollo y fortalecimiento de las distintas comunidades libres de Cochabamba.</li>
+                </ul>
+                <p>Súmate a la <a href="http://bit.ly/listahacklab">Lista de distribución</a>.</p>
+            </article>
+        </section>
+        <footer>
+            <p>Toda la información que encuentres del HackLab está bajo licencia <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-SA 4.0</a></p>
+            <p>Iconos utilizados de <a href="http://www.thenounproject.com/">www.thenounproject.com</a></p>
+            <p>Dominio Público / <span>icono noun</span></p>
+            <p><span>icono gift</span> / Gift by Stefan Parnarov from The Noun Project</p>
+            <p><span>icono share</span> / Share Idea by Kelig Le Luron from The Noun Project</p>
+        </footer>
     </body>
 </html>
