--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>Porque cada vez necesitamos más espacios donde sepamos que nuestra información no es comercializada y utilizada para fines que no son los que nosotr+s decidimos hemos pensado en crear el Barrio Hacker: el barrio de todas aquellas personas que quieren compartir un vecindario con amigas y amigos glocales con los que encontrarse y poder plantear alternativas a las plataformas tradicionales.</p>
                 <p>Es libre, así que vísita todos los barrios en <a href="http://www.barriohacker.net">www.barriohacker.net</a></p>
                 <p>Uno de los barrios de dónde surge esta idea es el de las Trayectorias Tecno-Lógicas, y que en el siguiente vídeo puedes ver de qué se trata la idea.</p>
-                <iframe class="vid" src="https://www.youtube.com/watch?v=vtDqjwQIL50"></iframe>
+                <iframe class="vid" src="https://www.youtube.com/embed/vtDqjwQIL50"></iframe>
             </article>
         </section>
         <section id="contact">
